--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
-#website_name{
-    font-family: 'Permanent Marker', cursive;
+.header{
+    color: white;
+    font-family: 'Yeon Sung';
+    font-size: 45px;
+    letter-spacing: 10px;
+    margin-top: 80px;
 }
-#username{
-    width:220px;
+body{
+    background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73aa, #006494);   
 }
-td{
-    width:500px;
+.login_div{
+	background: rgba(255,255,255,0.8);float: none;border-radius: 15px;
 }
